# py-sar-wind

./: .gitignore  README.md  broker.py  config.json  config.yml  gmted2010_30.vrt  nansat.yml  parent-mmd.xml  pyproject.toml  pytest.ini  requirements.txt  sar-wind.yml  sarvind.yml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: pytest.yml
nansat_mappers/: mapper_sarwind.py
puml/: container-diagram.puml  context-diagram.puml  landscape-diagram.puml  sarwind-component-diagram.puml  sarwind-container-diagram.puml
sardata/: SARData.py  sardata.py  sardataNBS.py
sarwind/: __init__.py  cdop.py  cmod5n.py  sarwind.py  search_and_collocate.py
sarwind/script/: process_reproject_and_export_mmd.py  process_sar_wind.py  reproject_and_export.py
scripts/: run_sarwind.py
swutils/: README.md  utils.py
tests/: conftest.py  test_sardata.py  test_sarwind.py  test_scripts.py  test_search_and_collocate.py  test_winddata.py
tests/files/: S1A_EW_GRDM_1SDH_20210324T035507_20210324T035612_037135_045F42_5B4C.NBS.nc  S1A_EW_GRDM_1SDH_20221026T054324_20221026T054411_045609_05740B_6B3F.SAFE.nc  S1A_IW_GRDH_1SDV_20221026T054447_20221026T054512_045609_05740C_2B2A.SAFE.nc  S1A_IW_GRDM_1SDV_20240416T171946_20240416T172013_053462_067C88_E676.nc  arome_arctic_vtk_20210324T03Z_nansat.nc  arome_arctic_vtk_20210324T03Z_nansat05.nc  meps_det_vdiv_2_5km_20221026T06Z_nansat05.nc  meps_mbr000_sfc_20240416T18Z.nc
utils/: utils.py
winddata/: winddata.py
