[metadata]
name = sarwind
version = attr: sarwind.__version__
author = MET Norway
author_email = mortenwh@met.no
description = Process wind speed from SAR and weather forecast wind directions
url = https://github.com/metno/met-sar-vind
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = Apache 2.0
classifiers =
    Development Status :: 0 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
project_urls =
    Source Code = https://github.com/metno/met-sar-vind

[options]
python_requires = >=3.8
include_package_data = True
packages = find:
install_requires =
    netCDF4
    numpy
    Pillow
    python-dateutil
    PyYAML
    requests
    scipy
    six
    urllib3
    xdg
    owslib
    py_mmd_tools@git+https://github.com/metno/py-mmd-tools.git
    fadg@git+https://github.com/metno/esa-coscaw-data-search.git

[options.data_files]
usr/share/doc/sarwind =
  README.md

[bdist_wheel]
universal = 0

[flake8]
ignore = E221,E226,E228,E241
max-line-length = 99
